--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.naveentp.gesturebuilder.DrawGestureActivity">
+
     <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+          android:title="@string/add"
           android:orderInCategory="100"
-          app:showAsAction="never"/>
+          android:icon="@drawable/ic_menu_add"
+          app:showAsAction="ifRoom"/>
 </menu>
