--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.naveentp.gesturebuilder.draw.DrawGestureActivity">
+      tools:context=".ui.draw.DrawGestureActivity">
 
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/menuAddGesture"
           android:title="@string/add"
           android:orderInCategory="100"
           android:icon="@drawable/ic_menu_add"
